[package]
name = "mmo_game_node"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.1"
bevy_third_person_camera = "0.1.11"
serde = { version = "1.0.209", features = ["derive"] }
clap = { version = "4.5.17", features = ["derive"] }
bevy_replicon_renet = "0.5.0"
bevy_replicon = "0.28.1"  # Add this line
bevy_renet = "0.0.12"